; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/binutils/bfd/extr_elfxx-sparc.c__bfd_sparc_elf_new_section_hook.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/binutils/bfd/extr_elfxx-sparc.c__bfd_sparc_elf_new_section_hook.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { %struct._bfd_sparc_elf_section_data* }
%struct._bfd_sparc_elf_section_data = type { i32 }

@FALSE = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @_bfd_sparc_elf_new_section_hook(i32* %0, %struct.TYPE_4__* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32*, align 8
  %5 = alloca %struct.TYPE_4__*, align 8
  %6 = alloca %struct._bfd_sparc_elf_section_data*, align 8
  %7 = alloca i32, align 4
  store i32* %0, i32** %4, align 8
  store %struct.TYPE_4__* %1, %struct.TYPE_4__** %5, align 8
  %8 = load %struct.TYPE_4__*, %struct.TYPE_4__** %5, align 8
  %9 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %8, i32 0, i32 0
  %10 = load %struct._bfd_sparc_elf_section_data*, %struct._bfd_sparc_elf_section_data** %9, align 8
  %11 = icmp ne %struct._bfd_sparc_elf_section_data* %10, null
  br i1 %11, label %24, label %12

12:                                               ; preds = %2
  store i32 4, i32* %7, align 4
  %13 = load i32*, i32** %4, align 8
  %14 = load i32, i32* %7, align 4
  %15 = call %struct._bfd_sparc_elf_section_data* @bfd_zalloc(i32* %13, i32 %14)
  store %struct._bfd_sparc_elf_section_data* %15, %struct._bfd_sparc_elf_section_data** %6, align 8
  %16 = load %struct._bfd_sparc_elf_section_data*, %struct._bfd_sparc_elf_section_data** %6, align 8
  %17 = icmp eq %struct._bfd_sparc_elf_section_data* %16, null
  br i1 %17, label %18, label %20

18:                                               ; preds = %12
  %19 = load i32, i32* @FALSE, align 4
  store i32 %19, i32* %3, align 4
  br label %28

20:                                               ; preds = %12
  %21 = load %struct._bfd_sparc_elf_section_data*, %struct._bfd_sparc_elf_section_data** %6, align 8
  %22 = load %struct.TYPE_4__*, %struct.TYPE_4__** %5, align 8
  %23 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %22, i32 0, i32 0
  store %struct._bfd_sparc_elf_section_data* %21, %struct._bfd_sparc_elf_section_data** %23, align 8
  br label %24

24:                                               ; preds = %20, %2
  %25 = load i32*, i32** %4, align 8
  %26 = load %struct.TYPE_4__*, %struct.TYPE_4__** %5, align 8
  %27 = call i32 @_bfd_elf_new_section_hook(i32* %25, %struct.TYPE_4__* %26)
  store i32 %27, i32* %3, align 4
  br label %28

28:                                               ; preds = %24, %18
  %29 = load i32, i32* %3, align 4
  ret i32 %29
}

declare dso_local %struct._bfd_sparc_elf_section_data* @bfd_zalloc(i32*, i32) #1

declare dso_local i32 @_bfd_elf_new_section_hook(i32*, %struct.TYPE_4__*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
